CodeGen from PR 26667 in Azure/azure-rest-api-specs Merge 9feefeaa5f38f84aa29f8559b33f3fa0a4e73b67 into 41e4538ed7bb3ceac3c1322c9455a0812ed110ac

--- a/sdk/translation/ci.yml
+++ b/sdk/translation/ci.yml
@@ -35,3 +35,5 @@ extends:
       safeName: azureaitranslationdocument
     - name: azure-ai-translation-text
       safeName: azureaitranslationtext
+    - name: azure-ai-documenttranslation
+      safeName: azureaidocumenttranslation
