CodeGen from PR 28002 in Azure/azure-rest-api-specs Merge 169a28b2d5f04417a19c0a877af2a7a9ad195fb2 into c1a6baa03bc5861ade8be93e4ad0a7673732ad2d

--- a/sdk/translation/azure-ai-translation-text/tsp-location.yaml
+++ b/sdk/translation/azure-ai-translation-text/tsp-location.yaml
@@ -1,3 +1,5 @@
-directory: specification/translation/Azure.AI.TextTranslation
-commit: 4637adf8aac277915fad37135dc4d11d34e166b9
+additionalDirectories: []
+commit: 6db6ff50896cdaed897fdd6ece33921f58e043d3
 repo: Azure/azure-rest-api-specs
+directory: specification/translation/Azure.AI.TextTranslation
+
