CodeGen from PR 28287 in Azure/azure-rest-api-specs Merge f4f163b13aa1a27a205e82eb53e92ae6c417bbb6 into a7f8fb628797436ba442c2b59afb082a4080a9cd

--- a/sdk/translation/azure-ai-translation-text/tsp-location.yaml
+++ b/sdk/translation/azure-ai-translation-text/tsp-location.yaml
@@ -1,3 +1,5 @@
-directory: specification/translation/Azure.AI.TextTranslation
-commit: 7b097c7e91a72a8930b94282274158b71e604695
 repo: Azure/azure-rest-api-specs
+commit: 55f2d7dafcd7f83570424a17f856b767a321e701
+directory: specification/translation/Azure.AI.TextTranslation
+additionalDirectories: []
+
