CodeGen from PR 28920 in Azure/azure-rest-api-specs Merge 9ae72c2dbf3e9a687e7a7e0087d82c64dfd57491 into 6e1615efb228e3aa8542af6dfc67bddb448e362d

--- a/sdk/translation/azure-ai-translation-text/tsp-location.yaml
+++ b/sdk/translation/azure-ai-translation-text/tsp-location.yaml
@@ -1,3 +1,4 @@
 directory: specification/translation/Azure.AI.TextTranslation
-commit: 7b097c7e91a72a8930b94282274158b71e604695
+commit: 9fd4bfec4da72d19b57d0ace1fea92ddb067234a
 repo: Azure/azure-rest-api-specs
+additionalDirectories:
