--- a/sdk/translation/azure-ai-translation-text/tsp-location.yaml
+++ b/sdk/translation/azure-ai-translation-text/tsp-location.yaml
@@ -1,3 +1,4 @@
 directory: specification/translation/Azure.AI.TextTranslation
-commit: 7b097c7e91a72a8930b94282274158b71e604695
+commit: 18f079f27b3ea41be1514c313456ca41e07f6171
 repo: Azure/azure-rest-api-specs
+additionalDirectories:
