CodeGen from PR 29168 in Azure/azure-rest-api-specs Merge c003b2d653314150ad76bbb25f3e61efb9495238 into db2f049580ad55549ce9a34635ab58bc5a27c814

--- a/sdk/translation/azure-ai-translation-text/tsp-location.yaml
+++ b/sdk/translation/azure-ai-translation-text/tsp-location.yaml
@@ -1,3 +1,4 @@
 directory: specification/translation/Azure.AI.TextTranslation
-commit: 7b097c7e91a72a8930b94282274158b71e604695
+commit: 39f7fe92e19bc18b507368d87a85558b5c9518f9
 repo: Azure/azure-rest-api-specs
+additionalDirectories:
