CodeGen from PR 29171 in Azure/azure-rest-api-specs Merge 6b2192458cb1fd7df296402f8c4b068e41475562 into 1038ce69b65e720c8e38428dd2046c7116e5d1b2

--- a/sdk/translation/azure-ai-translation-text/tsp-location.yaml
+++ b/sdk/translation/azure-ai-translation-text/tsp-location.yaml
@@ -1,3 +1,4 @@
 directory: specification/translation/Azure.AI.TextTranslation
-commit: 7b097c7e91a72a8930b94282274158b71e604695
+commit: 343b4ba9a3a095d417816d20744898ec3a50744f
 repo: Azure/azure-rest-api-specs
+additionalDirectories:
