--- a/sdk/translation/azure-ai-translation-text/tsp-location.yaml
+++ b/sdk/translation/azure-ai-translation-text/tsp-location.yaml
@@ -1,3 +1,4 @@
 directory: specification/translation/Azure.AI.TextTranslation
-commit: 9583ed6c26ce1f10bbea92346e28a46394a784b4
+commit: 1b500c7c1aa217744d8d3cf6ff96b7a6f7b08e03
 repo: Azure/azure-rest-api-specs
+additionalDirectories:
