CodeGen from PR 29194 in Azure/azure-rest-api-specs Merge 0f1c5bdccc6cd853062ac452157083cebf0e9307 into 1d994b314d45e33c6d63a9f7b729db8346b8ea0f

--- a/sdk/translation/azure-ai-translation-text/tsp-location.yaml
+++ b/sdk/translation/azure-ai-translation-text/tsp-location.yaml
@@ -1,3 +1,4 @@
 directory: specification/translation/Azure.AI.TextTranslation
-commit: 6470c5eed831574c4f804ed3fa568c46b5e2b09c
+commit: afb86a9e7a9986163a738fcd5de6ec3671ed0406
 repo: Azure/azure-rest-api-specs
+additionalDirectories:
