--- a/sdk/translation/azure-ai-translation-text/tsp-location.yaml
+++ b/sdk/translation/azure-ai-translation-text/tsp-location.yaml
@@ -1,3 +1,4 @@
 directory: specification/translation/Azure.AI.TextTranslation
-commit: 6470c5eed831574c4f804ed3fa568c46b5e2b09c
+commit: c07668ee92b4103562709efef709781156ae3c1f
 repo: Azure/azure-rest-api-specs
+additionalDirectories:
