CodeGen from PR 29282 in Azure/azure-rest-api-specs Merge c793166caf588270a26509226e865c5d04289fa9 into 51031c3dc961c33be93afe1f15d35acfe5999861

--- a/sdk/translation/azure-ai-translation-document/tsp-location.yaml
+++ b/sdk/translation/azure-ai-translation-document/tsp-location.yaml
@@ -1,4 +1,4 @@
-commit: c70d880019bbd107ca2423fb734a681cd1a75332
-repo: Azure/azure-rest-api-specs
 directory: specification/translation/Azure.AI.DocumentTranslation
-
+commit: 31f0111f704f457bebaed87c0ffa217f6e88f716
+repo: Azure/azure-rest-api-specs
+additionalDirectories:
